# LkTRS

./: CMakeLists.txt  accumulator.cpp  accumulator.h  lktrs.cpp  lktrs.h  main.cpp  pp.h  spk.cpp  spk.h
